--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "chrome"
+    "test": "chrome",
+    "combine": "report"
   },
   "keywords": [],
   "author": "",
