--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "chrome",
-    "combine": "report"
+    
+  // use mochawesome reporter as usually
+  "reporter": "mochawesome",
+  "reporterOptions": {
+    // disable overwrite to generate many JSON reports
+    "overwrite": false,
+    // do not generate intermediate HTML reports
+    "html": true,
+    // generate intermediate JSON reports
+    "json": false
+  
+}
   },
   "keywords": [],
   "author": "",
