--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -1,11 +1,17 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
+
+    
+
 name: Generate Cypress Reports
 on:
   push:
     branches:
     - 'master'
+  schedule: ## Schedule the job to run at a particular time.
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 16 * * *'
 jobs:
   cypress-test:
     
