--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -6,12 +6,9 @@
 
 name: Generate Cypress Reports
 on:
-  push:
-    branches:
-    - 'master'
   schedule: ## Schedule the job to run at a particular time.
     # * is a special character in YAML so you have to quote this string
-    - cron:  '30 8 * * *'
+    - cron:  '*/15 * * * *'
 jobs:
   cypress-test:
     
