--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -45,11 +45,14 @@ jobs:
     - name: Generate HTML report
       run: npm run report:generate
               
-    - name: Deploy report page to Github Page
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Upload S3    
+      uses: shallwefootball/s3-upload-action@master
+      id: S3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./public
+          aws_key_id: ${{secrets.AWS_ACCESS_KEY}}
+          aws_secret_access_key: ${{secrets.AWS_ACCESS_SECRET}}
+          aws_bucket: githubreport
+          source_dir: 'cypress'
     
  
     
