--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
 },
 
   "scripts": {
-    "test: chrome": "cypress run --browser chrome",
-     "report:merge": "mochawesome-merge cypress/results/json/*.json > index.json",
-     "report:generate": "marge index.json --reportDir public --assetsDir public/assets --reportPageTitle index.html"
+    
+     "clean:reports": "rm -R -f cypress/reports && mkdir cypress/reports && mkdir cypress/reports/mochareports",
+    "pretest": "npm run clean:reports",
+    "scripts": "cypress run --browser chrome",
+    "combine-reports": "mochawesome-merge cypress/reports/mocha/*.json > cypress/reports/mochareports/report.json",
+    "generate-report": "marge cypress/reports/mochareports/report.json -f report -o cypress/reports/mochareports",
+    "posttest": "npm run combine-reports && npm run generate-report",
+    "test": "npm run scripts || npm run posttest"
+  }
   }
   
   }
